whitespace issue fixed

--- a/src/components/pages/Landingpage/Landingpage.css
+++ b/src/components/pages/Landingpage/Landingpage.css
@@ -1,13 +1,15 @@
+
+
 .Landingpage {
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    position:fixed;
+    padding:0;
+    margin:0;
+
+    top:0;
+    left:0;
     background:#202020;
-    width: auto;
-    height: 100%;
     width: 100%;
-    position: absolute;
-    z-index: 1;
+    height: 100%;
 }
 
 .btn_register_pop_up {
@@ -142,16 +144,17 @@
     grid-row: 19;
 }
 
-@media screen and (max-width: 1600px) {
+@media screen and (max-width: 1680px) {
     .Landingpage {
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        position:fixed;
+        padding:0;
+        margin:0;
+
+        top:0;
+        left:0;
         background:#202020;
-        height:100%;
-        width: 100vw;
-        position: absolute;
-        z-index: 1;
+        width: 100%;
+        height: 100%;
     }
     
     .Frontlogo {
@@ -233,13 +236,15 @@
     
         @media screen and (max-width: 960px) {
         .Landingpage {
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            position:fixed;
+            padding:0;
+            margin:0;
+
+            top:0;
+            left:0;
             background:#202020;
-            height:100%;
-            position: absolute;
-            z-index: 1;
+            width: 100%;
+            height: 100%;
             
         }
         
@@ -321,15 +326,15 @@
         }
             @media screen and (max-width: 500px) {
                 .Landingpage {
-                    top: 50%;
-                    left: 50%;
-                    transform: translate(-50%, -50%);
-                    background:#202020;
-                    height:100%;
-                    position: absolute;
-                    z-index: 1;
+                    position:fixed;
+                    padding:0;
+                    margin:0;
 
-                    
+                    top:0;
+                    left:0;
+                    background:#202020;
+                    width: 100%;
+                    height: 100%;                    
                 }
                 
                 .Frontlogo {
